added more html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <p>Hello world</p>
+    <header id="header">
+      <img id="header-img" src="PLACEHOLDERIMG.jpg"></img>
+      <nav id="nav-bar">
+        <a href="/header">HTML</a>
+        <a href="/test/">test</a>
+        <a href="/again/">again</a>
+      </nav>
+      </header>
+      <video id="video" src="https://www.youtube.com/watch?v=bWPMSSsVdPk"></video>
+     <form id="form" action="https://www.freecodecamp.com/email-submit">
+    
+       Email<input id="email" type="email" name="email" placeholder="please enter your email"></input>
+       </br>
+       <input type="submit" id="submit"></input>
+          </form>
+    
     <!--
 
     Hello Camper!
